tests/errors/syntax_errors/import_star.py
# pylint: disable=missing-function-docstring, missing-module-docstring, wildcard-import
from nargs import *

print(f())
